[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "memorymap_printer"
version = "0.1.0"
authors = [
  { name="Provotorov.A", email="merqcio11@gmail.com" },
]
description = "Package provides some basic tools for creating memory map from memory blocks and printing it as a text."
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

